--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ gunicorn==21.2.0
 rapidfuzz==3.6.1
 wikipedia-api==0.5.8
 pytz==2025.1
+bs4==0.0.2           # ✅ BeautifulSoup for Wikipedia parsing
+lxml==5.2.1          # ✅ Improves Wikipedia search results parsing
+python-dotenv==1.0.1 # ✅ Load API keys from .env (for security)
